--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.35",
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
