--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-nesting": "^12.0.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.37.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
